@@ -1,3 +1,9 @@
+2017-10-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Improve subtraction of global variables.
+
 2017-10-18 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* SDCC.props: boost 1.64
